--- a/index.ipynb
+++ b/index.ipynb
@@ -471,8 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = list(ci)\n",
-    "\n",
+    "pyeongchang_keys = list(cities[11].keys())\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
