--- a/index.ipynb
+++ b/index.ipynb
@@ -467,13 +467,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['City', 'Country', 'Population', 'Area']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pyeongchang_keys = list(cities[11].keys())\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "print(pyeongchang_keys) # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
    ]
   },
